...
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/main_top_bar"/>
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/text_first_operand"
                style="@style/myCalc.portraitOperationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:contentDescription="@string/display_first_operand"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_top_app_bar_layout"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/text_operator"
                style="@style/myCalc.portraitOperatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/text_second_operand"
                app:layout_constraintTop_toBottomOf="@+id/text_first_operand" />

            <TextView
                android:id="@+id/text_second_operand"
                style="@style/myCalc.portraitOperationText"
                android:layout_width="wrap_content"
...
            <TextView
                android:id="@+id/text_equal"
                style="@style/myCalc.portraitEqualText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_operation_result"
                app:layout_constraintEnd_toStartOf="@+id/text_operation_result"
                app:layout_constraintTop_toTopOf="@+id/text_operation_result" />

            <TextView
                android:id="@+id/text_operation_result"
                style="@style/myCalc.portraitOperationResultText"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scientific_container_opened_overlay"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_open_close_scientific_container"
                    style="@style/myCalc.portraitScientificNavButton"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/scientific_keyboard_open"
                    app:icon="@drawable/ic_nav_scientific_keyboard_arrow_open"
                    app:layout_constraintBottom_toBottomOf="parent"
...
