...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/scientific_keyboard_euler"
            app:icon="@drawable/ic_scientific_euler"
            app:iconSize="35dp"
            app:layout_constraintBottom_toTopOf="@+id/button_mod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_pi"
            app:layout_constraintTop_toBottomOf="@+id/button_sqrt" />

        <com.google.android.material.button.MaterialButton
...
